samples/_failures_safe/1761156903_5f517e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7500054c.c: In function ‘main’:
./samples/SAFE/__tmp_7500054c.c:133:21: error: ‘stack’ undeclared (first use in this function)
  133 |             strncpy(stack
      |                     ^~~~~
./samples/SAFE/__tmp_7500054c.c:133:21: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_7500054c.c:133:26: error: expected ‘)’ at end of input
  133 |             strncpy(stack
      |                    ~     ^
      |                          )
./samples/SAFE/__tmp_7500054c.c:133:13: error: too few arguments to function ‘strncpy’
  133 |             strncpy(stack
      |             ^~~~~~~
In file included from /usr/include/features.h:502,
                 from /usr/include/x86_64-linux-gnu/bits/libc-header-start.h:33,
                 from /usr/include/stdio.h:28,
                 from ./samples/SAFE/__tmp_7500054c.c:2:
/usr/include/x86_64-linux-gnu/bits/string_fortified.h:92:1: note: declared here
   92 | __NTH (strncpy (char *__restrict __dest, const char *__restrict __src,
      | ^~~~~
./samples/SAFE/__tmp_7500054c.c:133:13: error: expected declaration or statement at end of input
  133 |             strncpy(stack
      |             ^~~~~~~
./samples/SAFE/__tmp_7500054c.c:133:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_7500054c.c:133:13: error: expected declaration or statement at end of input
